src/asint/ConstructorASTsTiny.java
/* ConstructorASTsTiny.java */
/* Generated By:JavaCC: Do not edit this line. ConstructorASTsTiny.java */
package asint;

import asint.ClaseSemanticaTiny;
import asint.SintaxisAbstractaTiny.Prog;
import asint.SintaxisAbstractaTiny.LDec_0;
import asint.SintaxisAbstractaTiny.Instrs_0;
import asint.SintaxisAbstractaTiny.LInstr_0;
import asint.SintaxisAbstractaTiny.LDec;
import asint.SintaxisAbstractaTiny.Dec;
import asint.SintaxisAbstractaTiny.Tipo;
import asint.SintaxisAbstractaTiny.ListaRecord;
import asint.SintaxisAbstractaTiny.CamposRecord;
import asint.SintaxisAbstractaTiny.LProcParams_0;
import asint.SintaxisAbstractaTiny.LProcParams;
import asint.SintaxisAbstractaTiny.Param;
import asint.SintaxisAbstractaTiny.LInstr;
import asint.SintaxisAbstractaTiny.Instr;
import asint.SintaxisAbstractaTiny.LExps_0;
import asint.SintaxisAbstractaTiny.LExps;
import asint.SintaxisAbstractaTiny.Exp;

public class ConstructorASTsTiny implements ConstructorASTsTinyConstants {
   private ClaseSemanticaTiny sem = new ClaseSemanticaTiny();

// Entrada principal
  final public 
Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
Prog p;
      p = S();
      jj_consume_token(0);
{if ("" != null) return p;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
}

  final public Prog S() throws ParseException {
    trace_call("S");
    try {
LDec_0 d;
   Instrs_0 i;
      jj_consume_token(PROGRAM);
      d = LDec_0();
      i = Instrs_0();
      jj_consume_token(END_PROGRAM);
{if ("" != null) return (Prog)sem.prog(d,i);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("S");
    }
}

// Seccion declaraciones
  final public 
LDec_0 LDec_0() throws ParseException {
    trace_call("LDec_0");
    try {
LDec l;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DECTYPE:
      case DECVAR:
      case DECPROC:{
        l = LDec();
        jj_consume_token(SEPARADOR);
{if ("" != null) return sem.si_dec(l);}
        break;
        }
      default:
        jj_la1[0] = jj_gen;
{if ("" != null) return sem.no_dec();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LDec_0");
    }
}

  final public LDec LDec() throws ParseException {
    trace_call("LDec");
    try {
Dec d;
   LDec l;
      d = Dec();
      l = RLDec(sem.una_dec(d));
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LDec");
    }
}

  final public LDec RLDec(LDec decsh) throws ParseException {
    trace_call("RLDec");
    try {
Dec d;
   LDec l;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUNTO_COMA:{
        jj_consume_token(PUNTO_COMA);
        d = Dec();
        l = RLDec(sem.muchas_decs(decsh,d));
{if ("" != null) return l;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
{if ("" != null) return decsh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RLDec");
    }
}

  final public Dec Dec() throws ParseException {
    trace_call("Dec");
    try {
Dec d;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DECVAR:{
        d = DecVar();
{if ("" != null) return d;}
        break;
        }
      case DECTYPE:{
        d = DecTipo();
{if ("" != null) return d;}
        break;
        }
      case DECPROC:{
        d = DecProc();
{if ("" != null) return d;}
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Dec");
    }
}

  final public Dec DecVar() throws ParseException {
    trace_call("DecVar");
    try {
Token id;
   Tipo t;
      jj_consume_token(DECVAR);
      id = jj_consume_token(ID);
      jj_consume_token(DOS_PUNTOS);
      t = Tipo();
{if ("" != null) return (Dec)sem.dec_var(id.image,t).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DecVar");
    }
}

  final public Dec DecTipo() throws ParseException {
    trace_call("DecTipo");
    try {
Token id;
   Tipo t;
      jj_consume_token(DECTYPE);
      id = jj_consume_token(ID);
      jj_consume_token(DOS_PUNTOS);
      t = Tipo();
{if ("" != null) return (Dec)sem.dec_tipo(id.image,t).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DecTipo");
    }
}

  final public Dec DecProc() throws ParseException {
    trace_call("DecProc");
    try {
Token id;
   LProcParams_0 ps;
   LDec_0 ds;
   Instrs_0 is;
      jj_consume_token(DECPROC);
      id = jj_consume_token(ID);
      jj_consume_token(PAP);
      ps = ProcParams_0();
      jj_consume_token(PCIERRE);
      ds = LDec_0();
      is = Instrs_0();
      jj_consume_token(END_PROC);
{if ("" != null) return (Dec)sem.dec_proc(id.image,ps,ds,is).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("DecProc");
    }
}

  final public Tipo Tipo() throws ParseException {
    trace_call("Tipo");
    try {
Token t;
   Tipo tipo;
   ListaRecord lr;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
{if ("" != null) return sem.tipo_int();}
        break;
        }
      case REAL:{
        jj_consume_token(REAL);
{if ("" != null) return sem.tipo_real();}
        break;
        }
      case BOOL:{
        jj_consume_token(BOOL);
{if ("" != null) return sem.tipo_bool();}
        break;
        }
      case STRING:{
        jj_consume_token(STRING);
{if ("" != null) return sem.tipo_string();}
        break;
        }
      case ID:{
        t = jj_consume_token(ID);
{if ("" != null) return (Tipo)sem.tipo_id(t.image).ponFila(t.beginLine).ponCol(t.beginColumn);}
        break;
        }
      case ARRAY:{
        jj_consume_token(ARRAY);
        jj_consume_token(CAP);
        t = jj_consume_token(LITERAL_ENTERO);
        jj_consume_token(CCIERRE);
        jj_consume_token(OF);
        tipo = Tipo();
{if ("" != null) return sem.tipo_array(t.image,tipo);}
        break;
        }
      case POINTER:{
        jj_consume_token(POINTER);
        tipo = Tipo();
{if ("" != null) return sem.tipo_pointer(tipo);}
        break;
        }
      case RECORD:{
        jj_consume_token(RECORD);
        lr = ListaRecord();
        jj_consume_token(END_RECORD);
{if ("" != null) return sem.tipo_record(lr);}
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Tipo");
    }
}

  final public ListaRecord ListaRecord() throws ParseException {
    trace_call("ListaRecord");
    try {
CamposRecord c;
   ListaRecord lr;
      c = CamposRecord();
      lr = RListaRecord(sem.un_camporecord(c));
{if ("" != null) return lr;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ListaRecord");
    }
}

  final public ListaRecord RListaRecord(ListaRecord lrh) throws ParseException {
    trace_call("RListaRecord");
    try {
CamposRecord c;
   ListaRecord lr;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUNTO_COMA:{
        jj_consume_token(PUNTO_COMA);
        c = CamposRecord();
        lr = RListaRecord(sem.muchos_camposrecord(lrh,c));
{if ("" != null) return lr;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
{if ("" != null) return lrh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RListaRecord");
    }
}

  final public CamposRecord CamposRecord() throws ParseException {
    trace_call("CamposRecord");
    try {
Token id;
   Tipo t;
      id = jj_consume_token(ID);
      jj_consume_token(DOS_PUNTOS);
      t = Tipo();
{if ("" != null) return (CamposRecord)sem.camporecord(id.image,t).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("CamposRecord");
    }
}

  final public LProcParams_0 ProcParams_0() throws ParseException {
    trace_call("ProcParams_0");
    try {
LProcParams ps;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REF:
      case ID:{
        ps = ProcParams();
{if ("" != null) return sem.si_procparam(ps);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
{if ("" != null) return sem.no_procparam();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ProcParams_0");
    }
}

  final public LProcParams ProcParams() throws ParseException {
    trace_call("ProcParams");
    try {
Param p;
   LProcParams ps;
      p = Param();
      ps = RProcParam(sem.un_procparam(p));
{if ("" != null) return ps;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("ProcParams");
    }
}

  final public LProcParams RProcParam(LProcParams psh) throws ParseException {
    trace_call("RProcParam");
    try {
Param p;
   LProcParams ps;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        jj_consume_token(COMA);
        p = Param();
        ps = RProcParam(sem.muchos_procparam(psh,p));
{if ("" != null) return ps;}
        break;
        }
      default:
        jj_la1[6] = jj_gen;
{if ("" != null) return psh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RProcParam");
    }
}

  final public Param Param() throws ParseException {
    trace_call("Param");
    try {
Token id;
   Tipo t;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REF:{
        jj_consume_token(REF);
        id = jj_consume_token(ID);
        jj_consume_token(DOS_PUNTOS);
        t = Tipo();
{if ("" != null) return (Param)sem.param_ref(id.image,t).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      case ID:{
        id = jj_consume_token(ID);
        jj_consume_token(DOS_PUNTOS);
        t = Tipo();
{if ("" != null) return (Param)sem.param_val(id.image,t).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Param");
    }
}

// Seccion instrucciones
  final public 
Instrs_0 Instrs_0() throws ParseException {
    trace_call("Instrs_0");
    try {
LInstr l;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NULL:
      case TRUE:
      case FALSE:
      case IF:
      case WHILE:
      case NEW:
      case DISPOSE:
      case INPUT:
      case OUTPUT:
      case BLOCK:
      case MENOS:
      case POR:
      case PAP:
      case NOT:
      case ARROBA:
      case LITERAL_REAL:
      case LITERAL_ENTERO:
      case ID:
      case CADENA_LITERAL:{
        l = LInstr();
{if ("" != null) return sem.si_instr(l);}
        break;
        }
      default:
        jj_la1[8] = jj_gen;
{if ("" != null) return sem.no_instr();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Instrs_0");
    }
}

  final public LInstr_0 LInstr_0() throws ParseException {
    trace_call("LInstr_0");
    try {
LInstr l;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NULL:
      case TRUE:
      case FALSE:
      case IF:
      case WHILE:
      case NEW:
      case DISPOSE:
      case INPUT:
      case OUTPUT:
      case BLOCK:
      case MENOS:
      case POR:
      case PAP:
      case NOT:
      case ARROBA:
      case LITERAL_REAL:
      case LITERAL_ENTERO:
      case ID:
      case CADENA_LITERAL:{
        l = LInstr();
{if ("" != null) return sem.si_instr0(l);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
{if ("" != null) return sem.no_instr0();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LInstr_0");
    }
}

  final public LInstr LInstr() throws ParseException {
    trace_call("LInstr");
    try {
Instr i;
   LInstr l;
      i = Instr();
      l = RLInstr(sem.una_instr(i));
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("LInstr");
    }
}

  final public LInstr RLInstr(LInstr lh) throws ParseException {
    trace_call("RLInstr");
    try {
Instr i;
   LInstr l;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUNTO_COMA:{
        jj_consume_token(PUNTO_COMA);
        i = Instr();
        l = RLInstr(sem.muchas_instr(lh,i));
{if ("" != null) return l;}
        break;
        }
      default:
        jj_la1[10] = jj_gen;
{if ("" != null) return lh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("RLInstr");
    }
}

  final public Instr Instr() throws ParseException {
    trace_call("Instr");
    try {
Instr i;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NULL:
      case TRUE:
      case FALSE:
      case MENOS:
      case POR:
      case PAP:
      case NOT:
      case LITERAL_REAL:
      case LITERAL_ENTERO:
      case ID:
      case CADENA_LITERAL:{
        i = InstrAsig();
{if ("" != null) return i;}
        break;
        }
      case IF:{
        i = InstrIfOrIfElse();
{if ("" != null) return i;}
        break;
        }
      case WHILE:{
        i = InstrWhile();
{if ("" != null) return i;}
        break;
        }
      case INPUT:{
        i = InstrLectura();
{if ("" != null) return i;}
        break;
        }
      case OUTPUT:{
        i = InstrEscritura();
{if ("" != null) return i;}
        break;
        }
      case NEW:{
        i = InstrReserva();
{if ("" != null) return i;}
        break;
        }
      case DISPOSE:{
        i = InstrLiberacion();
{if ("" != null) return i;}
        break;
        }
      case ARROBA:{
        i = InstrInvocar();
{if ("" != null) return i;}
        break;
        }
      case BLOCK:{
        i = InstrCompuesta();
{if ("" != null) return i;}
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Instr");
    }
}

  final public Instr InstrAsig() throws ParseException {
    trace_call("InstrAsig");
    try {
Exp e1,e2;
      e1 = E0();
      jj_consume_token(ASIGNACION);
      e2 = E0();
{if ("" != null) return sem.instr_asig(e1,e2);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("InstrAsig");
    }
}

  final public Instr InstrIfOrIfElse() throws ParseException {
    trace_call("InstrIfOrIfElse");
    try {
Exp e;
   LInstr_0 li1, li2;
      jj_consume_token(IF);
      e = E0();
      jj_consume_token(DOS_PUNTOS);
      li1 = LInstr_0();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        jj_consume_token(ELSE);
        li2 = LInstr_0();
        jj_consume_token(END_IF);
{if ("" != null) return sem.instr_ifelse(e, li1, li2);}
        break;
        }
      case END_IF:{
        jj_consume_token(END_IF);
{if ("" != null) return sem.instr_if(e, li1);}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("InstrIfOrIfElse");
    }
}
